# mapply

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CD.yml  CI.yml  codeql-analysis.yml
docs/: Makefile
docs/source/: conf.py  index.rst
requirements/: ci.txt  docs.txt  prod.txt
src/mapply/: __init__.py  _groupby.py  _window_groupby.py  groupby.py  mapply.py  parallel.py
tests/: __init__.py  test_mapply.py  test_parallel.py
