[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mapply"
description = "Sensible multi-core apply function for Pandas"
readme = "README.md"
urls = {Repository = "https://github.com/ddelange/mapply", Documentation = "https://mapply.readthedocs.io"}
authors = [{name = "ddelange", email = "ddelange@delange.dev"}]
requires-python = ">=3.8" # sync with classifiers below, and tool.ruff and tool.mypy
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
dynamic = ["version", "dependencies"] # , "optional-dependencies"

[tool.coverage.run]
branch = true
omit = ["site-packages"]

[tool.interrogate]
fail-under = 100
exclude = ["docs", "tests", ".eggs", ".env", ".venv"]
verbose = 1
quiet = false
color = true
ignore-module = true
ignore-nested-functions = true
ignore-private = true
ignore-semiprivate = true

[tool.mypy]
python_version = "3.8"
files = ["src/**/*.py"]
ignore_missing_imports = true
warn_no_return = false
disallow_untyped_defs = false
allow_redefinition = true

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false

[tool.pytest.ini_options]
addopts = "-s --strict-markers -vv --cache-clear --doctest-modules --cov=mapply --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail --ignore=docs"

[tool.ruff]
select = ["ALL"]
ignore = ["D407", "E501", "ANN", "TRY003", "D203", "D213"] # ignores: D407 (we have google style docstrings), E501 (we have black), ANN (we have mypy), TRY003 (there is EM102), D203 (there is D211), D213 (there is D212)
target-version = "py38"

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["E401", "E402"]
"**/tests/**/*.py" = ["S101", "D100", "D104"]

[tool.ruff.isort]
known-first-party = ["tests"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/prod.txt"]}

[tool.setuptools_scm]
